fix: Increase height of list items for better visibility

--- a/src/app/Pages/Instructor/home/home.component.scss
+++ b/src/app/Pages/Instructor/home/home.component.scss
@@ -133,7 +133,7 @@
   text-decoration: none;
 }
 .listItem{
-  height: 240px;
+  height: 250px;
   overflow-y: auto;
     scrollbar-width: none;
 }
